ajustado padding de la lista enumerada

--- a/src/bio.html
+++ b/src/bio.html
@@ -23,7 +23,7 @@
 
       <div class="bio-header-tw">As stated by Far Out Magazine <a href="https://faroutmagazine.co.uk/rolling-stones-best-albums-ranked/" class="text-site_blue"><i class="fas fa-external-link-alt"></i></a>, their top 10 albums from all-time are:</div>
 
-      <ol class="list-decimal mx-auto mb-4">
+      <ol class="list-decimal mx-auto mb-4 pl-8">
         <li>Exile On Main St. (1972)</li>
         <li>Beggar's Banquet (1968)</li>
         <li>Let It Bleed (1969)</li>
